# claude-agent-sdk-rust

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-18-sdk-api-parity-roadmap.md  2026-06-19-v2.0-server-tools.md
examples/: prompt_caching.rs  server_tools.rs  structured_output.rs  tool_use.rs
src/: batch.rs  client.rs  conversation.rs  error.rs  lib.rs  models.rs  server_tools.rs  structured.rs  tokens.rs  types.rs
