[package]
name = "claude-sdk"
version = "2.1.0"
edition = "2021"
authors = ["Claude Agent SDK Contributors"]
description = "Native Rust SDK for the Claude API with streaming support and tool execution"
license = "MIT"
repository = "https://github.com/mcfearsome/claude-agent-sdk-rust"
keywords = ["claude", "anthropic", "ai", "llm", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/claude-sdk"
rust-version = "1.70"

# docs.rs configuration
[package.metadata.docs.rs]
# Build documentation for all features
all-features = true
# Enable cfg(docsrs) for conditional documentation
rustdoc-args = ["--cfg", "docsrs"]
# Show feature badges on docs.rs
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
# Build targets to document
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

# SSE parsing (for streaming)
eventsource-stream = "0.2"
bytes = "1"
async-stream = "0.3"

# HTTP types (for Bedrock signing)
http = "1"

# Token counting
tiktoken-rs = "0.6"

# REPL dependencies
rustyline = { version = "14", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
anyhow = "1"
tokio-test = "0.4"
tracing-subscriber = "0.3"

[features]
default = ["anthropic"]
anthropic = []
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]
repl = ["rustyline", "chrono", "tracing-subscriber"]
full = ["anthropic", "bedrock", "repl"]

# Bedrock dependencies (optional) - AWS SDK 1.x (stable)
[dependencies.aws-config]
version = "1"
optional = true

[dependencies.aws-sdk-bedrockruntime]
version = "1"
optional = true

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "streaming_chat"
path = "examples/streaming_chat.rs"

[[example]]
name = "tool_use"
path = "examples/tool_use.rs"

[[example]]
name = "prompt_caching"
path = "examples/prompt_caching.rs"

[[example]]
name = "server_tools"
path = "examples/server_tools.rs"

[[example]]
name = "structured_output"
path = "examples/structured_output.rs"

[[bin]]
name = "update-changelog"
path = "src/bin/update-changelog.rs"
required-features = ["anthropic"]

[[bin]]
name = "claude-repl"
path = "src/bin/claude-repl.rs"
required-features = ["repl"]
